--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Git Trackr - Open issues tracker</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link
+			href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap"
+			rel="stylesheet">
 	</head>
 
 	<body>
